Add links to the filetype list

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       </ul>
     </div>
     <ul>
-      <li class="pdf">File1.pdf</li>
-      <li class="xls">File2.xls</li>
-      <li class="doc">File3.doc</li>
-      <li class="doc">File4.doc</li>
-      <li class="pdf">File5.pdf</li>
+      <li class="pdf"> <a href="#">File1.pdf</a></li>
+      <li class="xls"> <a href="#">File2.xls</a></li>
+      <li class="doc"> <a href="#">File3.doc</a></li>
+      <li class="doc"> <a href="#">File4.doc</a></li>
+      <li class="pdf"> <a href="#">File5.pdf</a></li>
     </ul>
 
     <div class="sandwich">
