Add links to the filetype list

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         </li>
       </ul>
     </div>
-    <ul>
-      <li class="pdf"> <a href="#">File1.pdf</a></li>
-      <li class="xls"> <a href="#">File2.xls</a></li>
-      <li class="doc"> <a href="#">File3.doc</a></li>
-      <li class="doc"> <a href="#">File4.doc</a></li>
-      <li class="pdf"> <a href="#">File5.pdf</a></li>
+    <ul class="filetypes">
+      <li> <a href="#" class="pdf">File1.pdf</a></li>
+      <li> <a href="#" class="xls">File2.xls</a></li>
+      <li> <a href="#" class="doc">File3.doc</a></li>
+      <li> <a href="#" class="doc">File4.doc</a></li>
+      <li> <a href="#" class="pdf">File5.pdf</a></li>
     </ul>
 
     <div class="sandwich">
