--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       </ul>
     </div>
     <ul class="filetypes">
-      <li> <a href="#" class="pdf">File1.pdf</a></li>
-      <li> <a href="#" class="xls">File2.xls</a></li>
-      <li> <a href="#" class="doc">File3.doc</a></li>
-      <li> <a href="#" class="doc">File4.doc</a></li>
-      <li> <a href="#" class="pdf">File5.pdf</a></li>
+      <li> <a href="path/to/file1.pdf" class="pdf">File1.pdf</a></li>
+      <li> <a href="path/to/file2.pdf" class="xls">File2.xls</a></li>
+      <li> <a href="path/to/file3.pdf" class="doc">File3.doc</a></li>
+      <li> <a href="path/to/file4.pdf" class="doc">File4.doc</a></li>
+      <li> <a href="path/to/file5.pdf" class="pdf">File5.pdf</a></li>
     </ul>
 
     <div class="sandwich">
