--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     </div>
     <ul class="filetypes">
       <li> <a href="path/to/file1.pdf" class="pdf">File1.pdf</a></li>
-      <li> <a href="path/to/file2.pdf" class="xls">File2.xls</a></li>
-      <li> <a href="path/to/file3.pdf" class="doc">File3.doc</a></li>
-      <li> <a href="path/to/file4.pdf" class="doc">File4.doc</a></li>
+      <li> <a href="path/to/file2.xls" class="xls">File2.xls</a></li>
+      <li> <a href="path/to/file3.doc" class="doc">File3.doc</a></li>
+      <li> <a href="path/to/file4.doc" class="doc">File4.doc</a></li>
       <li> <a href="path/to/file5.pdf" class="pdf">File5.pdf</a></li>
     </ul>
-    
+
 
     <div class="sandwich">
       <ul>
